# video_player

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: FindFFmpeg.cmake  FindSDL3.cmake
include/Core/: Clock.hpp  Demuxer.hpp  FFmpegCommon.hpp  Mediator.hpp  PlayerEngine.hpp  SafeQueue.hpp
include/Decoders/: AudioDecoder.hpp  IDecoder.hpp  VideoDecoder.hpp
include/Outputs/: IAudioOutput.hpp  IVideoOutput.hpp  SDL3Output.hpp  SDLAudioOutput.hpp
include/Utils/: Logger.hpp  MemoryPool.hpp  ThreadPool.hpp
src/: CMakeLists.txt  main.cpp
src/Core/: Clock.cpp  Demuxer.cpp  FFmpegCommon.cpp  PlayerEngine.cpp
src/Decoders/: AudioDecoder.cpp  VideoDecoder.cpp
src/Outputs/: SDL3Output.cpp  SDLAudioOutput.cpp
src/Utils/: Logger.cpp
